--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,6 +8,8 @@ jobs:
   builds:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@master
       - name: use Node.js 14
         uses: actions/setup-node@v1
         with:
