--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - node
+env:
 
 jobs:
   builds:
@@ -10,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
+        with:
+          ref: master
       - name: use Node.js 14
         uses: actions/setup-node@v1
         with:
